--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -946,6 +946,7 @@ section.highlight {
   justify-content: center;
   align-items: center;
   right: 0;
+  top: 0;
   width: 350px;
   height: 350px;
 
